# planetary

./: .gitignore  Cargo.toml  build.rs  resources.json
data/: shaders.json  textures.json
data/shaders/: block.frag.glsl  block.vert.glsl  grid.frag.glsl  grid.vert.glsl  ico.frag.glsl  ico.vert.glsl  ico_select.frag.glsl
engine/: Cargo.toml
engine/src/: camera.rs  clock.rs  event.rs  graphics.rs  inputs.rs  lib.rs  render.rs  resources.rs  updates.rs
engine/src/graphics/: common.rs  helper.rs  texture.rs
game/: Cargo.toml
game/src/: editor.rs  main.rs  structures.rs  ui.rs
game/src/pipelines/: ico.rs
game/src/structures/: ico.rs
resources/: Cargo.toml
resources/src/: lib.rs  resources.rs
src/: camera.rs  editor.rs  graphics.rs  main.rs  render.rs  ui.rs
src/graphics/: common.rs  helper.rs  shaders.rs  texture.rs
src/graphics/pipelines/: ico.rs
src/structures/: ico.rs
