[package]
name = "game"
version = "0.1.0"
authors = ["Pepijn Dragt <pepijn.dragt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine = { path = "../engine" }

bytemuck = { version = "1.5.1", features = [ "derive" ] }
glam = { version = "0.13.1", features = [ "bytemuck", "mint" ] }
crevice = "0.6.0"
mint = "0.5.6"

imgui-wgpu = "0.14.0"
imgui = "0.7.0"
imgui-winit-support = "0.7.0"
rand = "0.8.3"