[package]
name = "resources"
version = "0.1.0"
authors = ["Pepijn Dragt <pepijn.dragt@gmail.com>"]
edition = "2018"

[[bin]]
name = "packing"
required-features = [ "packing" ]

[features]
default = [ "packing" ]
packing = ["image", "shaderc"]

[dependencies]
serde = { version = "1.0.124", features = [ "derive" ] }

image = { version = "0.23.14", optional = true }
shaderc = { version= "0.7.2", optional = true }

serde_json = "1.0.64"
bincode = "1.3.2"
env_logger = "0.8.3"
log = "0.4.14"
flate2 = "1.0.20"
